# EigenBox

backend/: README.md  pyproject.toml
client/: README.md  pyproject.toml
client/eigen/: __init__.py  app.py  config.toml
client/eigen/core/: __init__.py  eigen.py  provider.py  service.py
client/eigen/core/config/: __init__.py  config.py  eigen_config.py  service_config.py  toml_config.py
client/eigen/models/: __init__.py  eigen_model.py  service_model.py  validators.py
client/eigen/models/providers/: __init__.py  docker_model.py
client/eigen/providers/: __init__.py  docker.py
client/eigenui/: app.py
client/eigenweb/: __init__.py  app.py  service.py  wrapper.py
client/eigenweb/components/: __init__.py  are_you_sure.py  service.py  spinner.py
client/eigenweb/pages/: dashboard.py  login.py
client/services/: nextcloud.toml
services/: nextcloud.toml
services/docker/: nextcloud.json
