[project]
name = "eigen"
version = "0.1.0"
description = ""
authors = [
    { name = "lstuma", email = "lstuma@pwned.place" },
    { name = "Jonty16117" },
    { name = "raspitim" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "eigen", from = "." }]

[tool.poetry.scripts]
eigen = "eigen.app:main"
