[project]
name = "eigen"
version = "0.1.0"
description = ""
authors = [
    { name = "lstuma", email = "lstuma@pwned.place" },
    { name = "Jonty16117" },
    { name = "raspitim" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pydantic (>=2.11.5,<3.0.0)", "docker (>=7.1.0,<8.0.0)", "toml (>=0.10.2,<0.11.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "eigen", from = "." },
    { include = "eigenui", from = "." },
]

[tool.poetry.scripts]
eigen = "eigen.app:main"
eigen-ui = "eigenui.app:main"
